# Graduation_Rafeeq

./: frames_2026-05-03_18.44.02.gv  frames_2026-05-03_18.44.23.gv  frames_2026-05-03_19.04.18.gv  frames_2026-05-03_19.04.36.gv  frames_2026-05-03_22.46.46.gv  frames_2026-05-07_15.18.11.gv  frames_2026-05-07_15.25.34.gv  frames_2026-05-07_15.55.47.gv  requirements.txt
.claude/: settings.local.json
install/: local_setup.sh  setup.sh
install/rafeeq_description/lib/rafeeq_description/: scan_relay  teleop_keyboard
install/rafeeq_description/share/rafeeq_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rafeeq_localization/share/rafeeq_localization/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rafeeq_speech/lib/rafeeq_speech/: speech_node.py
install/rafeeq_speech/share/rafeeq_speech/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rafeeq_speech/share/rafeeq_speech/cmake/: rafeeq_speechConfig.cmake
install/rafeeq_speech/share/rafeeq_speech/launch/: speech_recognition.launch.py
install/serial_node/lib/serial_node/: serial_bridge
log/: latest_build
src/rafeeq_localization/: CMakeLists.txt  package.xml
src/rafeeq_localization/launch/: ekf_gazebo.launch.py
src/rafeeq_speech/: CMakeLists.txt
src/rafeeq_speech/launch/: speech_recognition.launch.py
src/rafeeq_speech/models/: rafeeq_model.tflite
src/rafeeq_speech/scripts/: collect_rafeeq.py  speech_node.py  train_wake_word.py
src/serial_node/: package.xml  setup.py
(+28 files in other folders)
