<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rafeeq_speech</name>
  <version>0.1.0</version>
  <description>Offline speech recognition node for the Rafeeq wheelchair assistant.
    Listens for voice commands, verifies them, and publishes confirmed
    commands to the /navigation_goal topic.
  </description>

  <maintainer email="s-omar.awad@zewailcity.edu.eg">Omar Awad</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
